# outdoor_delivery_robot

./: README.md
odr_control/: CMakeLists.txt  package.xml
odr_description/: CMakeLists.txt  package.xml
odr_description/launch/: description.launch.py
odr_description/meshes/: base_link.stl  box_link_1.stl  fl_steer_link_1.stl  fl_wheel_link_1.stl  fr_steer_link_1.stl  fr_wheel_link_1.stl  rl_steer_link_1.stl  rl_wheel_link_1.stl  rr_steer_link_1.stl  rr_wheel_link_1.stl
odr_description/urdf/: materials.xacro  odr.urdf.xacro
