<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odr_description</name>
  <version>1.0.9</version>
  <description>Outdoor Delivery Robot URDF Description</description>

  <author email="luonganhvan2000@gmail.com">Luong Anh Van</author>
  <!-- <author email="email@mail.com">name</author> -->

  <maintainer email="luonganhvan2000@gmail.com">Luong Anh Van</maintainer>

  <url type="website">https://lav2000.com/</url>
  <url type="repository">https://github.com/LAV2000/outdoor_delivery_robot</url>

  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>realsense2_description</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>